transfer to sub-main branch content

--- a/index.htm
+++ b/index.htm
@@ -134,7 +134,7 @@ canvas {
 
  <!-- Login Form -->
  <div class="login-card">
-    <h2>Login Particle JS</h2>
+    <h2>Login Particle JS Example</h2>
     <form id="loginForm">
         <input type="email" name="email" placeholder="Email" required>
         <br>
